# kyrgyz_tts_bot

./: .env  Dockerfile  bot.py  ky_words_mini_compact_no_repeat.txt  pyproject.toml
